# simple-balance-api

./: Cargo.toml
src/: main.rs
src/webapp/: mod.rs  test.rs
src/webapp/app/: mod.rs
src/webapp/app/domain/account/: entity.rs  gateway.rs  mod.rs
src/webapp/app/domain/account/use_case/: deposit_use_case.rs  get_balance_use_case.rs  mod.rs  reset_use_case.rs  transfer_use_case.rs  withdraw_use_case.rs
src/webapp/app/gateway/: account.rs  mod.rs
src/webapp/endpoints/: balance.rs  mod.rs  reset.rs
src/webapp/endpoints/event/: deposit.rs  mod.rs  transfer.rs  withdraw.rs
