[package]
name = "account_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
dashmap = "5.0"
serde = {version = "1.0", features = ["derive"]}
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
[dev-dependencies]
tide-testing = "0.1"
serde_json = "1"